[workspace]
members = [
  # Bogo test shim
  "bogo",
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # Tests that require OpenSSL
  "openssl-tests",
  # example of custom provider
  "provider-example",
  "rustlsx",
  # the main library and tests
  "rustls",
  # rustls cryptography provider integration tests
  "rustls-provider-test",
]
default-members = [
  "bogo",
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[profile.bench]
codegen-units = 1
lto = true
